--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,28 @@
+::-webkit-scrollbar {
+  background-color: #d4a3f7;
+  width: 12px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #320d4b;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #d4a3f7;
+}
+
+::-webkit-scrollbar-button {
+  background-color: #d4a3f7;
+}
+
 :root {
   --primary: #ddbff3;
   --secondary: #8516cf;
+  --scrollbar-background-color: #d4a3f7;
+  --scrollbar-thumb-color: #320d4b;
+  --scrollbar-corner-color: #d4a3f7;
+  --scrollbar-button-color: #d4a3f7;
 }
 
 * {
@@ -34,31 +56,6 @@ body,
   width: 60%;
   height: 65vh;
   overflow: scroll;
-}
-
-:root {
-  --scrollbar-background-color: #d4a3f7;
-  --scrollbar-thumb-color: #320d4b;
-  --scrollbar-corner-color: #d4a3f7;
-  --scrollbar-button-color: #d4a3f7;
-}
-
-::-webkit-scrollbar {
-  background-color: var(--scrollbar-background-color);
-  width: 12px;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--scrollbar-thumb-color);
-}
-
-::-webkit-scrollbar-corner {
-  background-color: var(--scrollbar-corner-color);
-}
-
-::-webkit-scrollbar-button {
-  background-color: var(--scrollbar-button-color);
 }
 
 body {
